# alpha_velocity

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  API_VERSIONING.md  AlphaVelocity.py~  AlphaVelocity0.1.py  CI_CD.md  CLAUDE.md  CONCURRENT_OPTIMIZATION.md  CORS_SECURITY.md  DATABASE_SETUP.md  DESIGN.md  Dockerfile  ERROR_HANDLING.md  ERROR_QUICK_REFERENCE.md  HIGH_PRIORITY_TASKS_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INPUT_VALIDATION.md  LOGGING_IMPLEMENTATION.md  LOGGING_MIDDLEWARE.md  Makefile  PAGINATION.md  RATE_LIMITING.md  README.md  REDIS_CACHING.md  TASK_3_SUMMARY.md  TASK_5_SUMMARY.md  TESTING.md  TODO.md  add_category_mappings.sql  category_analysis.md  create_tables.py  docker-compose.yml  frontend_server.py  populate_market_data.py  pyproject.toml  pytest.ini  quick_db_setup.py  (+22 more)
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh  requirements.txt
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  dependency-check.yml  deploy.yml
backend/: auth.py  error_handlers.py  exceptions.py  main.py  simple_db_service.py
backend/api/: __init__.py
backend/cache/: __init__.py  decorators.py  redis_cache.py
backend/config/: account_lockout_config.py  cors_config.py  csrf_config.py  deprecation_config.py  env_validation.py  logging_config.py  portfolio_config.py  rate_limit_config.py  security_headers_config.py  token_rotation_config.py
frontend/: index.html  manifest.json  offline.html  sw.js  test_frontend_api.html
frontend/css/: styles.css
legacy/: AlphaVelocity.py  AlphaVelocity0_2.py  portfolio_pool.py  test_categorized_analysis.py
scripts/: backfill_historical_data.py  backfill_prices_and_snapshots.py  demo_database.py  setup_database.py
tests/: __init__.py  conftest.py  test_account_lockout.py  test_api.py  test_api_endpoints.py  test_api_v1_endpoints.py  test_auth.py  test_auth_endpoints.py  test_cache.py  test_cache_decorators.py  test_concurrent.py  test_cors_config.py  test_csrf_protection.py  test_data_providers.py  test_database_config.py  test_deprecation_middleware.py  test_env_validation.py  test_error_handlers.py  test_error_handling.py  test_error_handling_consistency.py  test_error_models.py  test_exceptions.py  test_logging_config.py  test_logging_middleware.py  test_main_endpoints.py  test_momentum_cache_service.py  test_momentum_engine.py  test_pagination.py  test_portfolio_service.py  test_price_service.py  test_rate_limit_config.py  test_refresh_token_rotation.py  test_security_headers.py  test_split_transactions.py  test_user_service.py  test_v1_errors.py  test_v1_historical.py  test_v1_transactions.py  test_validators_extended.py  test_validators_pytest.py
(+58 files in other folders)
